# ProgLang1

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
Solution/ProgLang1/: Main.cpp
Solution/ProgLang1/include/: Lexer.h
Solution/ProgLang1/src/Lexer/: Lexer.cpp
inc/: Lexer.h  Token.h
src/: CMakeLists.txt  Main.cpp
src/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp  Tokenizer.cpp
src/inc/: Lexer.h  ProgLang1Config.h  Token.h  Tokenizer.h
src/libs/: CMakeLists.txt
src/libs/Lexer/: CMakeLists.txt  Lexer.cpp  Token.cpp  Tokenizer.cpp
tests/: CMakeLists.txt  LexerTest.cpp
tests/LexerTests/: LexerTest.cpp
tests/TestPrograms/: singleTokens.pl
